# TodoManager

./: CMakeLists.txt  README.md  TodoManager.pro  TodoManager.pro.user.7ceb642  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
config/: AppConfig.cpp  AppConfig.h  CMakeLists.txt  SQLiteConfig.cpp  SQLiteConfig.h  StickyNoteConfig.cpp  StickyNoteConfig.h  TodoConfig.cpp  TodoConfig.h  UIConfig.cpp  UIConfig.h  config.pri
core/: CMakeLists.txt  EnumTypes.cpp  EnumTypes.h  ItemAndGroupPair.cpp  ItemAndGroupPair.h  ItemAndGroupWrapper.cpp  ItemAndGroupWrapper.h  ItemDetail.cpp  ItemDetail.h  ItemDetailAndTag.cpp  ItemDetailAndTag.h  ItemDetailDao.cpp  ItemDetailDao.h  ItemDetailTimeDao.cpp  ItemDetailTimeDao.h  ItemGroup.cpp  ItemGroup.h  ItemGroupDao.cpp  ItemGroupDao.h  ItemGroupOverview.cpp  ItemGroupOverview.h  ItemGroupRelation.cpp  ItemGroupRelation.h  ItemTag.cpp  ItemTag.h  SqlErrorException.cpp  SqlErrorException.h  StickyNote.cpp  StickyNote.h  StickyNoteDao.cpp  StickyNoteDao.h  core.pri
core/gtest/: CMakeLists.txt  TestCore.cpp
dao/: AbstractDao.cpp  AbstractDao.h  CMakeLists.txt  DaoFactory.cpp  DaoFactory.h  MySQLDao.cpp  MySQLDao.h  SQLDao.cpp  SQLDao.h  dao.pri
data/: CMakeLists.txt  DataCenter.cpp  DataCenter.h  GlobalCache.cpp  GlobalCache.h  data.pri
data/filters/: AbstractFilter.cpp  AbstractFilter.h  CMakeLists.txt  DateFilter.cpp  DateFilter.h
data/instances/: ItemDetailTimeWatcher.cpp  ItemDetailTimeWatcher.h
data/sorters/: AbstractSorter.cpp  AbstractSorter.h  CMakeLists.txt  DateSorter.cpp  DateSorter.h  DoneSorter.cpp  DoneSorter.h  SorterOrganize.cpp  SorterOrganize.h
docs/: ItemDetailWidgetUI.epgz
functions/: AppSystemTrayIcon.cpp  AppSystemTrayIcon.h  CMakeLists.txt  TaskArchivingTimeRecorder.cpp  TaskArchivingTimeRecorder.h  TaskOnTimeNotifier.cpp  TaskOnTimeNotifier.h  functions.pri
gtest/: CMakeLists.txt  TestCore.cpp  TestDataCenter.cpp  TestItemGroupUtils.cpp  test_main.cpp
resources/: defaultStyle.qss  resource.qrc
utils/: CMakeLists.txt  DrawUtils.cpp  DrawUtils.h  ItemGroupUtils.cpp  ItemGroupUtils.h  ItemTagUtils.cpp  ItemTagUtils.h  ItemUtils.cpp  ItemUtils.h  NofityUtils.cpp  NofityUtils.h  StringUtils.cpp  StringUtils.h  itemdetailutils.cpp  itemdetailutils.h  styleutils.cpp  styleutils.h  utils.pri
utils/gtest/: CMakeLists.txt  TestItemGroupUtils.cpp
widgets/: CMakeLists.txt  CustomListView.cpp  CustomListView.h  FetchConfigFilePathWidget.cpp  FetchConfigFilePathWidget.h  FetchConfigFilePathWidget.ui  ItemListItemDelegate.cpp  ItemListItemDelegate.h  MyTextEdit.cpp  MyTextEdit.h  MyTextEdit.ui  ProjectChooseDialog.cpp  ProjectChooseDialog.h  ProjectChooseDialog.ui  TagChooseDialog.cpp  TagChooseDialog.h  TagChooseDialog.ui  TagModeWidget.cpp  TagModeWidget.h  TagModeWidget.ui  flowlayout.cpp  flowlayout.h  itemaddtagwidget.cpp  itemaddtagwidget.h  itemaddtagwidget.ui  itemdetailwidget.cpp  itemdetailwidget.h  itemdetailwidget.ui  itemlistitemwidget.cpp  itemlistitemwidget.h  itemlistitemwidget.ui  itemlistwidget.cpp  itemlistwidget.h  itemlistwidget.ui  logger.cpp  logger.h  logwidget.cpp  logwidget.h  logwidget.ui  taglabelwidget.cpp  (+9 more)
widgets/CalendarMode/: CalendarCellWidget.cpp  CalendarCellWidget.h  CalendarCellWidget.ui  CalendarModeWidget.cpp  CalendarModeWidget.h  CalendarModeWidget.ui  CalendarModeWidget.ui.autosave  CalendarMonthWidget.cpp  CalendarMonthWidget.h  CalendarMonthWidget.ui  CalendarTimeLineWidget.cpp  CalendarTimeLineWidget.h  CalendarTimeLineWidget.ui  CalendarWeekWidget.cpp  CalendarWeekWidget.h  CalendarWeekWidget.ui
widgets/Common/: CommonAction.cpp  CommonAction.h
widgets/ProjectMode/: GroupDetailWidget.cpp  GroupDetailWidget.h  GroupDetailWidget.ui  GroupWidget.cpp  GroupWidget.h  NavigationBarWidget.cpp  NavigationBarWidget.h  NavigationBarWidget.ui  ProjectModeWidget.cpp  ProjectModeWidget.h  ProjectModeWidget.ui  groupwidget.ui
widgets/StickyNote/: StickyNoteConfigDialog.cpp  StickyNoteConfigDialog.h  StickyNoteConfigDialog.ui  StickyNoteModeWidget.cpp  StickyNoteModeWidget.h  StickyNoteModeWidget.ui  StickyNoteTypeItemDelegate.cpp  StickyNoteTypeItemDelegate.h  StickyNoteWidget.cpp  StickyNoteWidget.h  StickyNoteWidget.ui
widgets/TagMode/: TagModeListItemDelegate.cpp  TagModeListItemDelegate.h  TagModeWidget.cpp  TagModeWidget.h  TagModeWidget.ui
